--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "nabinbhandari.com.socketmessagingexample"
+        applicationId "com.nabinbhandari.android.socketmessaging"
         minSdkVersion 9
         targetSdkVersion 25
         versionCode 1
